--- a/covid_web.html
+++ b/covid_web.html
@@ -8,7 +8,7 @@
      ul{
    list-style-type:none;
    position: absolute;
-    left:20px; top:50px;
+    left:270px; top:50px;
 
 
 
@@ -21,7 +21,7 @@
 }
 
 .navi > li > a{
-   padding: 10px 170px;
+   padding: 0.6em 9.7em;
    background:rgb(219,193,193)
 
 }
@@ -53,7 +53,7 @@ li a:hover{
 }
 
   table.fixed{position: absolute;
-left:1480px; top:160px;
+left:970px; top:265px;
 border-style:solid;
 border-color:white;
 
@@ -68,12 +68,17 @@ border-color:gray;
 }
 
 .search{position:absolute;
- top:45px; left:1445px;
+ top:110px; left:930px;
+
 }
 
 .block-color-gray_background {
    background: rgb(235,236,237);
-             width: 385;
+             width: 600px;
+             border-style:solid;
+             border-color:gray;
+             border-width: 4px;
+
 
 }
 .location{
@@ -82,7 +87,7 @@ left:1640px;
 }
 
 .my-button{position: absolute;
-left:1485px; top:730px;
+left:770px; top:1830px;
    background: light-gray;
    width: 360;
    height: 200;
@@ -104,19 +109,19 @@ transform: translateY(4px);
 }
 .map{
 position: absolute;
-left:60px; top:130px;
+left:320px; top:130px;
 border-color: #E3CEF6;
 border-width: 3px;
 border-style: inset;
 }
 .status_table{
 position: absolute;
-left:60px; top:755px;
+left:320px; top:855px;
 }
 
 .price_index{
 position: absolute;
-left:500px; top:130px;
+left:330px; top:1250px;
 border-color: #E3CEF6;
 border-width: 3px;
 border-style: inset;
@@ -124,7 +129,7 @@ border-style: inset;
 
 .product1{
 position: absolute;
-left:500px; top:400px;
+left:330px; top:1520px;
 border-color: #E3CEF6;
 border-width: 3px;
 border-style: solid;
@@ -132,7 +137,7 @@ border-style: solid;
 
 .product2{
 position: absolute;
-left:800px; top:400px;
+left:740px; top:1520px;
 border-color: #E3CEF6;
 border-width: 3px;
 border-style: solid;
@@ -140,7 +145,7 @@ border-style: solid;
 
 .product3{
 position: absolute;
-left:1100px; top:400px;
+left:1150px; top:1520px;
 border-color: #E3CEF6;
 border-width: 3px;
 border-style: solid;
@@ -148,7 +153,7 @@ border-style: solid;
 
 .path{
 position: absolute;
-left:500px; top:730px;
+left:330px; top:1030px;
 border-color: #E3CEF6;
 border-width: 3px;
 border-style: inset;
@@ -173,7 +178,9 @@ border-style: inset;
    font-weight: bolder;
    font-size: x-large;
    border-radius: 3px; 
-   color: #ffffff;">
+   color: #ffffff;
+   position: absolute;
+    left:305px; top:0px;">
    ABOUT &nbsp COVID - 19
    </span>
   </p>
@@ -205,11 +212,11 @@ NEWS 검색<input type="text" class="input-search" size="40">
 </div>
 
   <div class="map">
-   <img src="images" alt="코로나 현황 분포도" width="400" height="600">
+   <img src="images" alt="코로나 현황 분포도" width="600" height="700">
   </div>
 
   <div class="status_table">
-  <table width="400" height="100" >
+  <table width="600" height="100" >
 	<caption>
     	코로나 현황 표
     </caption>
@@ -233,23 +240,23 @@ NEWS 검색<input type="text" class="input-search" size="40">
   </div>
 
   <div class="price_index">
-   <img src="images" alt="소비자 물가 지수" width="900" height="250">
+   <img src="images" alt="소비자 물가 지수" width="1230" height="250">
   </div>
 
   <div class="product1">
-   <img src="images" alt="코로나 관련 상품 TOP1" width="300" height="300">
+   <img src="images" alt="코로나 관련 상품 TOP1" width="410" height="300">
   </div>
 
   <div class="product2">
-   <img src="images" alt="코로나 관련 상품 TOP2" width="300" height="300">
+   <img src="images" alt="코로나 관련 상품 TOP2" width="410" height="300">
   </div>
 
   <div class="product3">
-   <img src="images" alt="코로나 관련 상품 TOP3" width="300" height="300">
+   <img src="images" alt="코로나 관련 상품 TOP3" width="410" height="300">
   </div>
 
   <div class="path">
-   <img src="images" alt="코로나 확진 상세 경로" width="900" height="200">
+   <img src="images" alt="코로나 확진 상세 경로" width="1230" height="200">
   </div>
 
 
@@ -267,7 +274,7 @@ NEWS 검색<input type="text" class="input-search" size="40">
         </div>
 </div>
 
-  <table width="390" height="560" class="fixed">
+  <table width="600" height="760" class="fixed">
    <div id="line">
    <th height="60">about corona NEWS</th>
    <tr>
