--- a/covid_web_heigt.html
+++ b/covid_web_heigt.html
@@ -8,7 +8,7 @@
      ul{
    list-style-type:none;
    position: absolute;
-    left:270px; top:50px;
+    left:272px; top:50px;
 
 
 
@@ -53,7 +53,7 @@ li a:hover{
 }
 
   table.fixed{position: absolute;
-left:970px; top:260px;
+left:970px; top:265px;
 border-style:solid;
 border-color:white;
 
@@ -69,11 +69,16 @@ border-color:gray;
 
 .search{position:absolute;
  top:110px; left:930px;
+
 }
 
 .block-color-gray_background {
    background: rgb(235,236,237);
              width: 600px;
+             border-style:solid;
+             border-color:gray;
+             border-width: 4px;
+
 
 }
 .location{
@@ -105,9 +110,9 @@ transform: translateY(4px);
 .map{
 position: absolute;
 left:320px; top:130px;
-border-color: #E3CEF6;
+border-color: gray;
 border-width: 3px;
-border-style: inset;
+border-style: solid;
 }
 .status_table{
 position: absolute;
@@ -117,15 +122,15 @@ left:320px; top:855px;
 .price_index{
 position: absolute;
 left:330px; top:1250px;
-border-color: #E3CEF6;
+border-color: gray;
 border-width: 3px;
-border-style: inset;
+border-style: solid;
 }
 
 .product1{
 position: absolute;
 left:330px; top:1520px;
-border-color: #E3CEF6;
+border-color: gray;
 border-width: 3px;
 border-style: solid;
 }
@@ -133,7 +138,7 @@ border-style: solid;
 .product2{
 position: absolute;
 left:740px; top:1520px;
-border-color: #E3CEF6;
+border-color: gray;
 border-width: 3px;
 border-style: solid;
 }
@@ -141,7 +146,7 @@ border-style: solid;
 .product3{
 position: absolute;
 left:1150px; top:1520px;
-border-color: #E3CEF6;
+border-color: gray;
 border-width: 3px;
 border-style: solid;
 }
@@ -149,14 +154,39 @@ border-style: solid;
 .path{
 position: absolute;
 left:330px; top:1030px;
-border-color: #E3CEF6;
+border-color: gray;
 border-width: 3px;
-border-style: inset;
+border-style: solid;
 }
 
+.vl1 {
+  border-left: 3px solid #848484;
+  height: 2000px;
+  position:absolute;
+  left: 315px;
+  margin-left: -3px;
+  top: 105px;
+}
 
+.vl2 {
+  border-left: 3px solid #848484;
+  height: 2000px;
+  position:absolute;
+  left: 1590px;
+  margin-left: -3px;
+  top: 105px;
+}
 
-
+.bbox{
+position:absolute;
+left: 312px;
+padding: 10px;
+display:block;
+top:70px;
+width: 1260px;
+height: 2020px;
+background-color: #fdf9f6;
+}
 
 
   </style>
@@ -166,6 +196,7 @@ border-style: inset;
  </head>
 
  <body>
+   <div class ="bbox"></div>
   <p style="text-align:center;">
   <span style="background: linear-gradient(to right, #ffa7a3, #5673bd);
    padding: 0.6em 22em;
@@ -181,7 +212,7 @@ border-style: inset;
   </p>
 
 
-  <div style="overflow:hidden ; width:1910px; height:1000px;">
+  <div style="overflow:auto ; width:1910px; height:1000px;">
   </div>
 
       <ul class="navi">
@@ -200,7 +231,7 @@ border-style: inset;
 
 </div>
 <div style="width:50%">
-NEWS 검색<input type="text" class="input-search" size="40">
+NEWS 검색<input type="text" class="input-search" size="70">
 <input type="submit" class= "input-search-submit" value="search" >
 </div>
 </figure>
@@ -211,7 +242,7 @@ NEWS 검색<input type="text" class="input-search" size="40">
   </div>
 
   <div class="status_table">
-  <table width="600" height="100" >
+  <table width="600" height="145" >
 	<caption>
     	코로나 현황 표
     </caption>
@@ -269,7 +300,7 @@ NEWS 검색<input type="text" class="input-search" size="40">
         </div>
 </div>
 
-  <table width="600" height="760" class="fixed">
+  <table width="610" height="760" class="fixed">
    <div id="line">
    <th height="60">about corona NEWS</th>
    <tr>
@@ -286,6 +317,10 @@ NEWS 검색<input type="text" class="input-search" size="40">
    </tr>
    </div>
   </table>
+
+ <div class="vl1"></div>
+  <div class="vl2"></div>
+
 
  </body>
 </html>
