--- a/covid_web_heigt.html
+++ b/covid_web_heigt.html
@@ -9,21 +9,14 @@
    list-style-type:none;
    position: absolute;
     left:272px; top:50px;
-
-
-
 }
 
 .navi > li{
    float: left;
-
-
 }
-
 .navi > li > a{
    padding: 0.6em 9.7em;
    background:rgb(219,193,193)
-
 }
 
 li a{
@@ -35,8 +28,6 @@ li a{
     text-align: center;
     padding: 10px;
     background:rgb(219,193,193)
-
-
 }
 
 li a:hover{
@@ -78,8 +69,6 @@ border-color:gray;
              border-style:solid;
              border-color:gray;
              border-width: 4px;
-
-
 }
 .location{
 position:static;
@@ -87,7 +76,7 @@ left:1640px;
 }
 
 .my-button{position: absolute;
-left:770px; top:1830px;
+left:1170px; top:1830px;
    background: light-gray;
    width: 360;
    height: 200;
@@ -161,7 +150,7 @@ border-style: solid;
 
 .vl1 {
   border-left: 3px solid #848484;
-  height: 2000px;
+  height: 2010px;
   position:absolute;
   left: 315px;
   margin-left: -3px;
@@ -170,7 +159,7 @@ border-style: solid;
 
 .vl2 {
   border-left: 3px solid #848484;
-  height: 2000px;
+  height: 2010px;
   position:absolute;
   left: 1590px;
   margin-left: -3px;
@@ -183,9 +172,9 @@ left: 312px;
 padding: 10px;
 display:block;
 top:70px;
-width: 1260px;
+width: 1258px;
 height: 2020px;
-background-color: #fdf9f6;
+background-color: #fbfbfd;
 }
 
 
@@ -197,6 +186,9 @@ background-color: #fdf9f6;
 
  <body>
    <div class ="bbox"></div>
+
+     <body bgcolor='#F6F0F0'></body>
+
   <p style="text-align:center;">
   <span style="background: linear-gradient(to right, #ffa7a3, #5673bd);
    padding: 0.6em 22em;
