--- a/covid_web_heigt.html
+++ b/covid_web_heigt.html
@@ -78,7 +78,7 @@ left:1640px;
 .my-button{position: absolute;
 left:1170px; top:1830px;
    background: light-gray;
-   width: 362;
+   width: 360;
    height: 200;
    border-color: rgb(200,197,197);
    border-width: 8px;
@@ -284,8 +284,9 @@ NEWS 검색<input type="text" class="input-search" size="70">
       <br>&nbsp &nbsp &nbsp &nbsp 점수 알아보러 가기
     </h2>
     <div class = "location">
-       <!-- <button id="myButton" class="float-left submit-button" >Home</button> 다른 html로 넘기는 것-->
-<button class = "button" onclick="window.open('http://webtong.kr') ">
+      <!--button id="myButton" class="float-left submit-button" >Home</button>-->
+   <!-- <button class = "button" onclick="window.open('http://webtong.kr') ">-->
+        <button class = "button" id="myButton" class="float-left submit-button">
 
     <h2 style = "font-size=large" >
     QUIZ
