--- a/covid_web_heigt.html
+++ b/covid_web_heigt.html
@@ -1,4 +1,3 @@
-
 <html>
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -8,14 +7,14 @@
      ul{
    list-style-type:none;
    position: absolute;
-    left:272px; top:50px;
+    left:195px; top:50px;
 }
 
 .navi > li{
    float: left;
 }
 .navi > li > a{
-   padding: 0.6em 9.7em;
+   padding: 0.6em 10.9em;
    background:rgb(219,193,193)
 }
 
@@ -44,9 +43,8 @@ li a:hover{
 }
 
   table.fixed{position: absolute;
-left:970px; top:265px;
-border-style:solid;
-border-color:white;
+left:865px; top:128px;
+
 
 }
 th{background: rgb(235,236,237);
@@ -59,13 +57,13 @@ border-color:gray;
 }
 
 .search{position:absolute;
- top:110px; left:930px;
+ top:115px; left:827px;
 
 }
 
 .block-color-gray_background {
    background: rgb(235,236,237);
-             width: 600px;
+             width: 780px;
              border-style:solid;
              border-color:gray;
              border-width: 4px;
@@ -75,7 +73,8 @@ position:static;
 left:1640px;
 }
 
-.my-button{position: absolute;
+.my-button{
+position: absolute;
 left:1170px; top:1830px;
    background: light-gray;
    width: 360;
@@ -98,14 +97,14 @@ transform: translateY(4px);
 }
 .map{
 position: absolute;
-left:320px; top:130px;
+left:250px; top:130px;
 border-color: gray;
 border-width: 3px;
 border-style: solid;
 }
 .status_table{
 position: absolute;
-left:320px; top:855px;
+left:255px; top:855px;
 }
 
 .price_index{
@@ -152,7 +151,7 @@ border-style: solid;
   border-left: 3px solid #848484;
   height: 2010px;
   position:absolute;
-  left: 315px;
+  left: 240px;
   margin-left: -3px;
   top: 105px;
 }
@@ -161,22 +160,44 @@ border-style: solid;
   border-left: 3px solid #848484;
   height: 2010px;
   position:absolute;
-  left: 1590px;
+  left: 1665px;
   margin-left: -3px;
   top: 105px;
 }
 
 .bbox{
 position:absolute;
-left: 312px;
+left: 240px;
 padding: 10px;
 display:block;
 top:70px;
-width: 1258px;
+width: 1405px;
 height: 2020px;
 background-color: #fbfbfd;
 }
-
+.mapbox{
+text-align:center;
+position: absolute;
+border-color: gray;
+border-width: 3px;
+border-style: solid;
+border-radius: 10px;
+width: 70px;
+height: 60px;
+background-color: rgb(123,226,228,0.3);
+}
+.mapbox:hover {
+text-align:center;
+position: absolute;
+border-color: gray;
+border-width: 3px;
+border-style: solid;
+border-radius: 10px;
+width: 80px;
+height: 70px;
+background-color: rgb(123,226,228,0.7);;
+cursor: pointer;
+  }
 
 
   </style>
@@ -192,46 +213,83 @@ background-color: #fbfbfd;
 
   <p style="text-align:center;">
   <span style="background: linear-gradient(to right, #ffa7a3, #5673bd);
-   padding: 0.6em 22em;
+   padding: 0.6em 25em;
    font-style: oblique;
    font-weight: bolder;
    font-size: x-large;
-   border-radius: 3px; 
+   border-radius: 3px;
    color: #ffffff;
    position: absolute;
-    left:305px; top:0px;">
+    left:230px; top:0px;">
    ABOUT &nbsp COVID - 19
    </span>
   </p>
-
 
   <div style="overflow:auto ; width:1910px; height:1000px;">
   </div>
 
       <ul class="navi">
-        <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
+        <li><a href="1.html">1</a></li>
+        <li><a href="2.html">2</a></li>
+        <li><a href="3.html">3</a></li>
+        <li><a href="4.html">4</a></li>
     </ul>
 
-<div class="search">
 
-<figure class="block-color-gray_background callout"
- style="white-space:pre-wrap;display:flex" id="83b4f705-294d-4d13-bf59-7f165430047d">
-<div style="font-size:2em">
-<span class="icon">💡</span>
-
-</div>
-<div style="width:50%">
-NEWS 검색<input type="text" class="input-search" size="70">
-<input type="submit" class= "input-search-submit" value="search" >
-</div>
-</figure>
-</div>
 
   <div class="map">
-   <img src="images" alt="코로나 현황 분포도" width="600" height="700">
+   <img src="https://cdn.crowdpic.net/detail-thumb/thumb_d_EFF4AD990DA8372F912F4E08EBB3058D.jpg" alt="코로나 현황 분포도" width="600" height="700">
+      <div class="mapbox" style=" left: 370px; top: 280px; ">
+          대구
+      </div>
+      <div class="mapbox" style=" left: 220px; top: 20px; ">
+          경기
+      </div>
+      <div class="mapbox" style=" left: 330px; top: 30px; ">
+          강원
+      </div>
+      <div class="mapbox" style=" left: 120px; top: 91px; ">
+          인천
+      </div>
+      <div class="mapbox" style=" left: 235px; top: 108px; ">
+          서울
+      </div><div class="mapbox" style=" left: 320px; top: 120px; ">
+          충북
+      </div>
+      <div class="mapbox" style=" left: 420px; top: 160px; ">
+          경북
+      </div>
+      <div class="mapbox" style=" left: 198px; top: 180px; ">
+          세종
+      </div>
+      <div class="mapbox" style=" left: 100px; top: 210px; ">
+          충남
+      </div>
+      <div class="mapbox" style=" left: 270px; top: 230px; ">
+          대전
+      </div>
+      <div class="mapbox" style=" left: 210px; top: 300px; ">
+          전북
+      </div>
+      <div class="mapbox" style=" left: 438px; top: 320px; ">
+          울산
+      </div><div class="mapbox" style=" left: 280px; top: 350px; ">
+          경남
+      </div>
+      <div class="mapbox" style=" left: 375px; top: 398px; ">
+          부산
+      </div>
+      <div class="mapbox" style=" left: 220px; top: 435px; ">
+          광주
+      </div>
+      <div class="mapbox" style=" left: 190px; top: 600px; ">
+          제주
+      </div>
+      <div class="mapbox" style=" left: 140px; top: 430px; ">
+          전남
+      </div>
+
+
   </div>
 
   <div class="status_table">
@@ -284,18 +342,15 @@ NEWS 검색<input type="text" class="input-search" size="70">
       <br>&nbsp &nbsp &nbsp &nbsp 점수 알아보러 가기
     </h2>
     <div class = "location">
-      <!--button id="myButton" class="float-left submit-button" >Home</button>-->
-   <!-- <button class = "button" onclick="window.open('http://webtong.kr') ">-->
         <button class = "button" id="myButton" class="float-left submit-button">
-
     <h2 style = "font-size=large" >
     QUIZ
     </h2>
-</button>
+       </button>
         </div>
 </div>
 
-  <table width="610" height="760" class="fixed">
+  <table width="792" height="893" class="fixed">
    <div id="line">
    <th height="60">about corona NEWS</th>
    <tr>
