--- a/covid_web.html
+++ b/covid_web.html
@@ -1,4 +1,3 @@
-
 <html>
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -8,22 +7,15 @@
      ul{
    list-style-type:none;
    position: absolute;
-    left:272px; top:50px;
-
-
-
+    left:195px; top:50px;
 }
 
 .navi > li{
    float: left;
-
-
 }
-
 .navi > li > a{
-   padding: 0.6em 9.7em;
+   padding: 0.6em 5.12em;
    background:rgb(219,193,193)
-
 }
 
 li a{
@@ -35,8 +27,6 @@ li a{
     text-align: center;
     padding: 10px;
     background:rgb(219,193,193)
-
-
 }
 
 li a:hover{
@@ -53,9 +43,8 @@ li a:hover{
 }
 
   table.fixed{position: absolute;
-left:970px; top:265px;
-border-style:solid;
-border-color:white;
+left:865px; top:128px;
+
 
 }
 th{background: rgb(235,236,237);
@@ -68,28 +57,27 @@ border-color:gray;
 }
 
 .search{position:absolute;
- top:110px; left:930px;
+ top:115px; left:827px;
 
 }
 
 .block-color-gray_background {
    background: rgb(235,236,237);
-             width: 600px;
+             width: 780px;
              border-style:solid;
              border-color:gray;
              border-width: 4px;
-
-
 }
 .location{
 position:static;
 left:1640px;
 }
 
-.my-button{position: absolute;
-left:770px; top:1830px;
+.my-button{
+position: absolute;
+left:1190px; top:2130px;
    background: light-gray;
-   width: 360;
+   width: 440;
    height: 200;
    border-color: rgb(200,197,197);
    border-width: 8px;
@@ -100,7 +88,7 @@ display:inline-block;
 cursor:pointer;
 border-radius: 10px;
 position: absolute;
-left:145px; top:110px;
+left:180px; top:110px;
 }
 .button:active{
 background-color: rgb(193,156,231);
@@ -109,60 +97,97 @@ transform: translateY(4px);
 }
 .map{
 position: absolute;
-left:320px; top:130px;
-border-color: #E3CEF6;
+left:250px; top:130px;
+border-color: gray;
 border-width: 3px;
-border-style: inset;
+border-style: solid;
 }
 .status_table{
 position: absolute;
-left:320px; top:855px;
+left:255px; top:855px;
+}
+
+.product_table{
+position: absolute;
+left:245px; top:1600px;
 }
 
 .price_index{
 position: absolute;
-left:330px; top:1250px;
-border-color: #E3CEF6;
-border-width: 3px;
-border-style: inset;
-}
-
-.product1{
-position: absolute;
-left:330px; top:1520px;
-border-color: #E3CEF6;
+left:250px; top:1250px;
+border-color: gray;
 border-width: 3px;
 border-style: solid;
 }
 
-.product2{
-position: absolute;
-left:740px; top:1520px;
-border-color: #E3CEF6;
-border-width: 3px;
-border-style: solid;
-}
-
-.product3{
-position: absolute;
-left:1150px; top:1520px;
-border-color: #E3CEF6;
-border-width: 3px;
-border-style: solid;
-}
 
 .path{
 position: absolute;
-left:330px; top:1030px;
-border-color: #E3CEF6;
+left:250px; top:1030px;
+border-color: gray;
 border-width: 3px;
-border-style: inset;
+border-style: solid;
 }
 
+.vl1 {
+  border-left: 3px solid #848484;
+  height: 2310px;
+  position:absolute;
+  left: 240px;
+  margin-left: -3px;
+  top: 105px;
+}
 
+.vl2 {
+  border-left: 3px solid #848484;
+  height: 2310px;
+  position:absolute;
+  left: 1665px;
+  margin-left: -3px;
+  top: 105px;
+}
 
+.bbox{
+position:absolute;
+left: 240px;
+padding: 10px;
+display:block;
+top:70px;
+width: 1405px;
+height: 2320px;
+background-color: #fbfbfd;
+}
+.mapbox{
+text-align:center;
+position: absolute;
+border-color: gray;
+border-width: 3px;
+border-style: solid;
+border-radius: 10px;
+width: 70px;
+height: 60px;
+background-color: rgb(123,226,228,0.3);
+}
+.mapbox:hover {
+text-align:center;
+position: absolute;
+border-color: gray;
+border-width: 3px;
+border-style: solid;
+border-radius: 10px;
+width: 80px;
+height: 70px;
+background-color: rgb(123,226,228,0.7);;
+cursor: pointer;
+  }
+.imagebox{
+position:absolute;
+width: 850px;
+height: 250px;
+left:295px;
+top:2175px;
 
-
+}
 
   </style>
      <link rel="stylesheet" href="button.css">
@@ -171,60 +196,104 @@ border-style: inset;
  </head>
 
  <body>
+
+   <div class ="bbox"></div>
+
+     <body bgcolor='#F6F0F0'></body>
+
+
   <p style="text-align:center;">
   <span style="background: linear-gradient(to right, #ffa7a3, #5673bd);
-   padding: 0.6em 22em;
+   padding: 0.6em 25em;
    font-style: oblique;
    font-weight: bolder;
    font-size: x-large;
-   border-radius: 3px; 
+   border-radius: 3px;
    color: #ffffff;
    position: absolute;
-    left:305px; top:0px;">
+    left:230px; top:0px;">
    ABOUT &nbsp COVID - 19
    </span>
   </p>
 
-
-  <div style="overflow:hidden ; width:1910px; height:1000px;">
+  <div style="overflow:auto ; width:1910px; height:1000px;">
   </div>
 
       <ul class="navi">
-        <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
+        <li><a href="1.html">코로나 기사 분석</a></li>
+        <li><a href="search.html">코로나 기사 검색</a></li>
+          <li><a href="survey.html">코로나 설문 조사</a></li>
+        <li><a href="http://ncov.mohw.go.kr/baroView4.do">코로나 예방 수칙</a></li>
+        <li><a href="https://www.mohw.go.kr/react/popup_200128_3.html">보건소 전화번호</a></li>
     </ul>
 
-<div class="search">
 
-<figure class="block-color-gray_background callout"
- style="white-space:pre-wrap;display:flex" id="83b4f705-294d-4d13-bf59-7f165430047d">
-<div style="font-size:2em">
-<span class="icon">💡</span>
-
-</div>
-<div style="width:50%">
-NEWS 검색<input type="text" class="input-search" size="40">
-<input type="submit" class= "input-search-submit" value="search" >
-</div>
-</figure>
-</div>
 
   <div class="map">
-   <img src="images" alt="코로나 현황 분포도" width="600" height="700">
+   <img src="https://cdn.crowdpic.net/detail-thumb/thumb_d_EFF4AD990DA8372F912F4E08EBB3058D.jpg" alt="코로나 현황 분포도" width="600" height="700">
+      <div class="mapbox" style=" left: 370px; top: 280px; ">
+          대구
+      </div>
+      <div class="mapbox" style=" left: 220px; top: 20px; ">
+          경기
+      </div>
+      <div class="mapbox" style=" left: 330px; top: 30px; ">
+          강원
+      </div>
+      <div class="mapbox" style=" left: 120px; top: 91px; ">
+          인천
+      </div>
+      <div class="mapbox" style=" left: 235px; top: 108px; ">
+          서울
+      </div><div class="mapbox" style=" left: 320px; top: 120px; ">
+          충북
+      </div>
+      <div class="mapbox" style=" left: 420px; top: 160px; ">
+          경북
+      </div>
+      <div class="mapbox" style=" left: 198px; top: 180px; ">
+          세종
+      </div>
+      <div class="mapbox" style=" left: 100px; top: 210px; ">
+          충남
+      </div>
+      <div class="mapbox" style=" left: 270px; top: 230px; ">
+          대전
+      </div>
+      <div class="mapbox" style=" left: 210px; top: 300px; ">
+          전북
+      </div>
+      <div class="mapbox" style=" left: 438px; top: 320px; ">
+          울산
+      </div><div class="mapbox" style=" left: 280px; top: 350px; ">
+          경남
+      </div>
+      <div class="mapbox" style=" left: 375px; top: 398px; ">
+          부산
+      </div>
+      <div class="mapbox" style=" left: 220px; top: 435px; ">
+          광주
+      </div>
+      <div class="mapbox" style=" left: 190px; top: 600px; ">
+          제주
+      </div>
+      <div class="mapbox" style=" left: 140px; top: 430px; ">
+          전남
+      </div>
+
+
   </div>
 
   <div class="status_table">
-  <table width="600" height="100" >
-	<caption>
-    	코로나 현황 표
+  <table width="600" height="145" >
+   <caption>
+        코로나 현황 표
     </caption>
     <thead>
-    	<tr>
+       <tr>
             <th>확진 환자</th>
             <th>격리 해제</th>
-            <th> 사망자  </th>
+            <th>&nbsp&nbsp사망자&nbsp&nbsp</th>
             <th>검사 진행</th>
          </tr>
     </thead>
@@ -239,42 +308,59 @@ NEWS 검색<input type="text" class="input-search" size="40">
     </table>
   </div>
 
+
+
+  <div class="product_table">
+  <table width="1410" height="450" >
+   <caption>
+       코로나 관련 상품
+    </caption>
+    <thead>
+       <tr>
+            <th>TOP1</th>
+            <th>TOP2</th>
+            <th>TOP3</th>
+         </tr>
+    </thead>
+    <tbody>
+         <tr>
+            <td>사진</td>
+            <td>사진</td>
+            <td>사진</td>
+        </tr>
+    </tbody>
+    </table>
+  </div>
+
   <div class="price_index">
-   <img src="images" alt="소비자 물가 지수" width="1230" height="250">
+   <img src="images" alt="소비자 물가 지수" width="1398" height="330">
   </div>
 
-  <div class="product1">
-   <img src="images" alt="코로나 관련 상품 TOP1" width="410" height="300">
-  </div>
 
-  <div class="product2">
-   <img src="images" alt="코로나 관련 상품 TOP2" width="410" height="300">
-  </div>
-
-  <div class="product3">
-   <img src="images" alt="코로나 관련 상품 TOP3" width="410" height="300">
-  </div>
 
   <div class="path">
-   <img src="images" alt="코로나 확진 상세 경로" width="1230" height="200">
+   <img src="images" alt="코로나 확진 상세 경로" width="1398" height="200">
   </div>
+<div class="imagebox">
+<img src= "https://i.pinimg.com/originals/9d/c2/ed/9dc2ed4d44d49e662d37e75c73dc9f79.png" style=" width: 850px ">
+    </div>
 
 
   <div class = "my-button">
   <h2 style = "font-size=x-large" >
-    &nbsp &nbsp &nbsp 나의 코로나 방역 수칙
-      <br>&nbsp &nbsp &nbsp &nbsp 점수 알아보러 가기
+    &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 나의 코로나 방역 수칙
+      <br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 점수 알아보러 가기
     </h2>
     <div class = "location">
-<button class = "button">
+        <button class = "button" id="myButton" class="float-left submit-button">
     <h2 style = "font-size=large" >
     QUIZ
     </h2>
-</button>
+       </button>
         </div>
 </div>
 
-  <table width="600" height="760" class="fixed">
+  <table width="792" height="893" class="fixed">
    <div id="line">
    <th height="60">about corona NEWS</th>
    <tr>
@@ -292,5 +378,15 @@ NEWS 검색<input type="text" class="input-search" size="40">
    </div>
   </table>
 
+ <div class="vl1"></div>
+  <div class="vl2"></div>
+
+
  </body>
 </html>
+
+<script type="text/javascript">
+    document.getElementById("myButton").onclick = function () {
+        location.href = "quizz.html";
+    };
+</script>
